# DARE

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
shaders/: lighting.inc.glsl  mipmaps.inc.glsl  random.inc.glsl  ray_struct.inc.glsl  raygen.rgen  rayhit.rchit  raymiss.rmiss  sampler.inc.glsl  utility.inc.glsl
src/: app.rs  main.rs  spirv.rs
src/asset/: gltf_asset_loader.rs  mod.rs
src/assets/: gltf_asset_loader2.rs  mod.rs  utils.rs
src/assets/buffer/: cpu_buffer.rs  mod.rs
src/assets/buffer_view/: attribute_view.rs  mod.rs
src/assets/data_source/: mod.rs
src/assets/image/: mod.rs
src/assets/loader/: mod.rs
src/assets/material/: mod.rs
src/assets/mesh/: mod.rs
src/assets/scene/: mod.rs
src/assets/scene/loader/: gltf.rs  mod.rs  utility.rs
src/assets/scene/loader/gltf/: mod.rs
src/assets/texture/: mod.rs
src/graphics/: acceleration_structure.rs  camera.rs  mod.rs
src/utils/: handle_storage.rs  memory.rs  mod.rs  transform.rs  types.rs
src/world/: controls.rs
