[package]
name = "DARE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
phobos = { git = "https://github.com/NotAPenguin0/phobos-rs", rev = "a775036" }
winit = "0.28.6"
pretty_env_logger = "0.5.0"
gltf = { version = "1.2.0", features = ["import", "names"] }
glam = "0.24.1"
ash = "0.37.3"
log = "0.4.19"
bytemuck = "1.13.1"
crevice = { version = "0.13.0", features = ["std", "glam"] }
base64 = "0.21.2"
rayon = "1.7.0"
num-traits = "0.2.16"
image = "0.24.6"

[build-dependencies]
shaderc = { version = "0.8.2", optional = true, features = ["build-from-source"] }

[dev-dependencies]
pretty_env_logger = "0.5.0"

[features]
default = ["shaderc"]
